<resources>
    <string name="app_name">CalculadoraMVP</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="subtract">-</string>
    <string name="sum">+</string>
    <string name="multiply">*</string>
    <string name="share">/</string>
    <string name="clear">C</string>
    <string name="toast_error_opeator_msg">Please insert an operator</string>
    <string name="toast_msg_divide">Error to divide with a 0</string>
    <string name="clear_all">CA</string>
</resources>
