<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/visor_operation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/visor_operation_dim"
        android:background="@color/visorColor"
        android:maxLines="@integer/one"
        android:textSize="@dimen/textOperationSize"
        app:layout_constraintBottom_toTopOf="@id/visor_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/visor_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/visor_heigth"
        android:background="@color/visorColor"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="@integer/one"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/textResultSize"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visor_operation" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/zero"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/one"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/two"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/three"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_subtract"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/four"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/five"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/six"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:background="@color/buttonColor"
        android:text="@string/seven"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:background="@color/buttonColor"
        android:text="@string/eight"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:background="@color/buttonColor"
        android:text="@string/nine"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_share"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/equal"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_sum"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_three" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/subtract"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/point"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/sum"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equal"
        app:layout_constraintTop_toBottomOf="@+id/button_subtract" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:background="@color/buttonColor"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_share" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="@dimen/button_layout_width"
        android:layout_height="@dimen/button_layout_height"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:background="@color/buttonColor"
        android:text="@string/share"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="@dimen/button_clear_width"
        android:layout_height="@dimen/button_clear_height"
        android:padding="@dimen/button_clear_padding"
        android:text="@string/clear"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@id/visor_result"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_clear_all"
        android:layout_width="@dimen/button_clear_width"
        android:layout_height="@dimen/button_clear_height"
        android:padding="@dimen/button_clear_padding"
        android:text="@string/clear_all"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@id/visor_result"
        app:layout_constraintStart_toEndOf="@id/button_clear" />
</androidx.constraintlayout.widget.ConstraintLayout>